# py-exonwebui-static

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
scripts/: build.sh  release.sh  setup_dev.sh
