[metadata]
name = exonwebui-static
version = file: src/exonwebui_static/VERSION
url = https://github.com/exonlabs/exonwebui-static
author = ExonLabs
author_email = info@exonlabs.net
license = BSD 3-Clause
description = Collected 3rd party UI static contents for the web
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = = src
zip_safe = False
include_package_data = True
python_requires = >= 3.7
